@@ -1,4 +1,7 @@
 ------------------- pcapsipdump 0.1.3 ------------------------------------------
+Thu Apr  2 11:51:33 MSD 2007
+        * Include "verbosity level" command-line option
+
 Thu Mar 22 18:35:16 MSK 2007
         * Fix compiler waring about variable, that might be used uninitialized 
 
